Tests/CompilerTests/negative/illegal-mutation-marker.hylo
public fun main() {
  var x = ()
  inout (y, z) = (&x, &x)
}
